# spark

./: .clang-format  .clang-tidy  .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  profile.sh.in  spark_config.hpp.in
.github/workflows/: ci.yml
cmake/: coverage.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  Linkdef.h  category_mgr_demo.cpp  empty_example.cpp  empty_example_categories.hpp  example_categories.hpp  example_reader_tree.cpp  example_writer_tree.cpp
include/spark/: spark.hpp
include/spark/core/: category.hpp  category_manager.hpp  data_source.hpp  detector.hpp  detector_manager.hpp  exceptions.hpp  reader_tree.hpp  root_file_header.hpp  root_source.hpp  spark_dep.hpp  task.hpp  task_manager.hpp  types.hpp  unpacker.hpp  writer_tree.hpp
include/spark/parameters/: container.hpp  database.hpp  lookup.hpp  parameters_ascii_source.hpp  parameters_memory_source.hpp  parameters_source.hpp  tabular.hpp
include/spark/utils/: conversions.hpp  data_scanner.hpp  demangler.hpp  string_functions.hpp
source/: CMakeLists.txt  Linkdef.h  spark.cpp
source/core/: category.cpp  data_source.cpp  detector.cpp  reader_tree.cpp  root_file_header.cpp  root_source.cpp  task_manager.cpp  unpacker.cpp  writer_tree.cpp
source/parameters/: container.cpp  database.cpp  lookup.cpp  parameters_ascii_source.cpp  parameters_source.cpp
source/utils/: helper_functions.cpp
templates/: profile.sh.in
test/: CMakeLists.txt  Linkdef.h  rootlogon.C  rootrc
test/core/: test_container.hpp  tests_category.cpp  tests_container.cpp  tests_database.cpp  tests_lookup.cpp  tests_tabular.cpp  tests_task_manager.cpp  tests_types.cpp  tests_utils.cpp
test/source/: spark_test.cpp
